crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__push_constants_compute.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/push_constants_compute.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang compute shader: push_constants.compute.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use serde::Serialize;

use crate::renderer::gpu_write::GPUWrite;
use crate::renderer::*;
use crate::shaders::atlas::{ComputeShaderAtlasEntry, PrecompiledShader};
use crate::shaders::json::{ComputeReflectionJson, ReflectedPipelineLayout};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct DispatchConstants {
    pub scale: f32,
    pub _padding_0: [u8; 4],
    pub tex: BindlessHandle<Sampler2D>,
    pub target: BindlessHandle<RwTexture2D>,
    pub inner: DispatchInner,
    pub tail: f32,
    pub _padding_1: [u8; 12],
    pub model: glam::Mat4,
}

impl GPUWrite for DispatchConstants {}
const _: () = assert!(std::mem::size_of::<DispatchConstants>() == 112);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, scale) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, tex) == 8);
const _: () = assert!(std::mem::size_of::<BindlessHandle<Sampler2D>>() == 8);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, target) == 16);
const _: () = assert!(std::mem::size_of::<BindlessHandle<RwTexture2D>>() == 8);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, inner) == 24);
const _: () = assert!(std::mem::size_of::<DispatchInner>() == 8);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, tail) == 32);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(DispatchConstants, model) == 48);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct DispatchInner {
    pub v: glam::Vec2,
}

impl GPUWrite for DispatchInner {}
const _: () = assert!(std::mem::size_of::<DispatchInner>() == 8);
const _: () = assert!(std::mem::offset_of!(DispatchInner, v) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Params {
    pub tint: glam::Vec4,
}

impl GPUWrite for Params {}
const _: () = assert!(std::mem::size_of::<Params>() == 16);
const _: () = assert!(std::mem::offset_of!(Params, tint) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<Params>,
}

#[derive(Debug, Clone, Copy)]
pub struct DispatchConstantsData {
    pub scale: f32,
    pub inner: DispatchInner,
    pub tail: f32,
    pub model: glam::Mat4,
}

#[derive(Debug, Clone, Copy)]
pub struct DispatchConstantsBindings {
    pub tex: SampledTexBinding,
    pub target: StorageTexBinding,
}

impl GraphBindingSet for DispatchConstantsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::SampledTex(self.tex));
        f(GraphBinding::StorageTex(self.target));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct DispatchConstantsInput {
    pub scale: f32,
    pub tex: SampledTexBinding,
    pub target: StorageTexBinding,
    pub inner: DispatchInner,
    pub tail: f32,
    pub model: glam::Mat4,
}

impl GraphShaderParams for DispatchConstants {
    type Data = DispatchConstantsData;
    type Bindings = DispatchConstantsBindings;
    type Input = DispatchConstantsInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            scale: data.scale,
            inner: data.inner,
            tail: data.tail,
            model: data.model,
            tex: bindings.tex,
            target: bindings.target,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            scale: input.scale,
            _padding_0: Default::default(),
            tex: resolver.sampled_tex(input.tex),
            target: resolver.storage_tex(input.target),
            inner: input.inner,
            tail: input.tail,
            _padding_1: Default::default(),
            model: input.model,
        }
    }
}

impl GraphBindingSet for DispatchConstantsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::SampledTex(self.tex));
        f(GraphBinding::StorageTex(self.target));
    }
}

/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ParamsInput {
    pub tint: glam::Vec4,
}

impl GraphShaderParams for Params {
    type Data = Self;
    type Bindings = ();
    type Input = ParamsInput;

    fn input(data: &Self::Data, _bindings: &Self::Bindings) -> Self::Input {
        Self::Input { tint: data.tint }
    }

    fn assemble_input(input: &Self::Input, _resolver: &BindingResolver<'_>) -> Self {
        Self { tint: input.tint }
    }
}

impl GraphBindingSet for ParamsInput {
    fn visit(&self, _f: &mut dyn FnMut(GraphBinding)) {}
}

impl crate::renderer::gpu_write::PushConstantBlock for DispatchConstants {}
// 128 bytes is the vulkan-guaranteed maxPushConstantsSize
const _: () = assert!(std::mem::size_of::<DispatchConstants>() <= 128);

pub const WORKGROUP_SIZE: [u32; 3] = [8, 8, 1];

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ComputeReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/push_constants.comp.json"
        ));

        let reflection_json: ComputeReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> ComputePipelineConfig<'a, PushBlock<DispatchConstants>> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        ComputePipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build()
    }

    fn comp_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .compute_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn comp_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/push_constants.comp.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ComputeShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_compute_shader(&self) -> PrecompiledShader {
        PrecompiledShader {
            entry_point_name: self.comp_entry_point_name(),
            spv_bytes: self.comp_spv(),
        }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn workgroup_size(&self) -> [u32; 3] {
        self.reflection_json.workgroup_size
    }

    fn reflection_json(&self) -> &ComputeReflectionJson {
        &self.reflection_json
    }
}
