crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__shared_enum.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/shared_enum.rs
---
// GENERATED FILE (do not edit directly)

//! shared types from slang module: shared_enum.slang

use facet::Facet;
use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
#[allow(unused_imports)]
use crate::renderer::render_graph::GPUWrite;

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Default, Facet)]
#[repr(u32)]
// variant names come from the shader author, so clippy's shared-prefix lint
// would otherwise force renaming away from the slang spelling
#[allow(clippy::enum_variant_names)]
pub enum SharedMode {
    #[default]
    Idle = 0,
    Busy = 1,
}

const _: () = assert!(std::mem::size_of::<SharedMode>() == 4);

impl From<SharedMode> for u32 {
    fn from(value: SharedMode) -> u32 {
        value as u32
    }
}

// A repr(int) enum holding a value outside its declared variants is undefined
// behavior. Data flows CPU -> GPU here, so the CPU never materializes a value it
// did not construct; any future readback must come back through this TryFrom,
// never a transmute or an `as` cast into the enum.
impl TryFrom<u32> for SharedMode {
    type Error = u32;

    fn try_from(value: u32) -> Result<Self, u32> {
        match value {
            0 => Ok(Self::Idle),
            1 => Ok(Self::Busy),
            other => Err(other),
        }
    }
}

impl GPURead for SharedMode {
    const GPU_SIZE: usize = 4;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        let tag = <u32 as GPURead>::read_gpu(bytes)?;

        Self::try_from(tag).map_err(|tag| anyhow::anyhow!("invalid SharedMode tag: {tag}"))
    }
}
