crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__std140_arrays.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/std140_arrays.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: std140_arrays.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct ArrayData {
    pub lead: f32,
    pub _padding_0: [u8; 12],
    pub konst: [glam::Vec4; 4],
    pub stages: [glam::UVec4; 8],
    pub wedge: glam::Vec2,
    pub _padding_1: [u8; 8],
    pub offsets: [glam::IVec4; 3],
    pub tail: f32,
    pub _padding_2: [u8; 12],
    pub nested: Nested,
    pub flags: glam::UVec4,
    pub bias: glam::IVec4,
}

impl GPUWrite for ArrayData {}
const _: () = assert!(std::mem::size_of::<ArrayData>() == 368);
const _: () = assert!(std::mem::offset_of!(ArrayData, lead) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(ArrayData, konst) == 16);
const _: () = assert!(std::mem::size_of::<[glam::Vec4; 4]>() == 64);
const _: () = assert!(std::mem::offset_of!(ArrayData, stages) == 80);
const _: () = assert!(std::mem::size_of::<[glam::UVec4; 8]>() == 128);
const _: () = assert!(std::mem::offset_of!(ArrayData, wedge) == 208);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(ArrayData, offsets) == 224);
const _: () = assert!(std::mem::size_of::<[glam::IVec4; 3]>() == 48);
const _: () = assert!(std::mem::offset_of!(ArrayData, tail) == 272);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(ArrayData, nested) == 288);
const _: () = assert!(std::mem::size_of::<Nested>() == 48);
const _: () = assert!(std::mem::offset_of!(ArrayData, flags) == 336);
const _: () = assert!(std::mem::size_of::<glam::UVec4>() == 16);
const _: () = assert!(std::mem::offset_of!(ArrayData, bias) == 352);
const _: () = assert!(std::mem::size_of::<glam::IVec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Nested {
    pub inner: [glam::UVec4; 2],
    pub pad: f32,
    pub _padding_0: [u8; 12],
}

impl GPUWrite for Nested {}
const _: () = assert!(std::mem::size_of::<Nested>() == 48);
const _: () = assert!(std::mem::offset_of!(Nested, inner) == 0);
const _: () = assert!(std::mem::size_of::<[glam::UVec4; 2]>() == 32);
const _: () = assert!(std::mem::offset_of!(Nested, pad) == 32);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<ArrayData>,
}

/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ArrayDataInput {
    pub lead: f32,
    pub konst: [glam::Vec4; 4],
    pub stages: [glam::UVec4; 8],
    pub wedge: glam::Vec2,
    pub offsets: [glam::IVec4; 3],
    pub tail: f32,
    pub nested: Nested,
    pub flags: glam::UVec4,
    pub bias: glam::IVec4,
}

impl GraphShaderParams for ArrayData {
    type Data = Self;
    type Bindings = ();
    type Input = ArrayDataInput;

    fn input(data: &Self::Data, _bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            lead: data.lead,
            konst: data.konst,
            stages: data.stages,
            wedge: data.wedge,
            offsets: data.offsets,
            tail: data.tail,
            nested: data.nested,
            flags: data.flags,
            bias: data.bias,
        }
    }

    fn assemble_input(input: &Self::Input, _resolver: &BindingResolver<'_>) -> Self {
        Self {
            lead: input.lead,
            _padding_0: Default::default(),
            konst: input.konst,
            stages: input.stages,
            wedge: input.wedge,
            _padding_1: Default::default(),
            offsets: input.offsets,
            tail: input.tail,
            _padding_2: Default::default(),
            nested: input.nested,
            flags: input.flags,
            bias: input.bias,
        }
    }
}

impl GraphBindingSet for ArrayDataInput {
    fn visit(&self, _f: &mut dyn FnMut(GraphBinding)) {}
}

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std140_arrays.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std140_arrays.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std140_arrays.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
